# ai-journal-proofreader

./: .gitignore  docker-compose.yml  original_article.py  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
backend/: .dockerignore  Dockerfile  README.md  config.json  config_manager.py  config_routes.py  main.py  migrate_config.py  proofreader.spec  pyproject.toml  validate_routes.py
backend/checks/: extractions.py  general.py
backend/prompts/: prompt.py
backend/tests/: conftest.py  test_config.py  test_section_checks.py
electron/: main.js  preload.js
frontend/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ConfigMatrix.tsx  ExportButton.tsx  FileUpload.tsx  ProgressTracker.tsx  ReportView.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: MainPage.tsx  SettingsPage.tsx
